sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: '=' expected but ';' found.
	val swapped;
                   ^